<resources>
    <string name="app_name">App Ambiental</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="txtOlvidastePass"><u>Olvide mi Contraseña</u></string>
    <string name="txtCrearCuenta"><u>Crear Cuenta</u></string>
    <string name="child_care">Ambiental Care</string>
    <string name="registrarse">Registrarse</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="recuperar_password">Restablecer Password</string>
    <string name="nueva_contrase_a">Nueva Contraseña:</string>
    <string name="textoBienvenida">Bienvenido al Apartado de\n Información\n\n Nosotros Cuidaremos del planeta!!</string>
    <string name="asitencia">Agregar 2</string>
    <string name="location">Localización</string>
    <string name="informacionKids">Informacion de Plantas</string>
    <string name="geolocalizaci_n">Geolocalizacion</string>
    <string name="informacion_del_ni_o">Informacion</string>
    <string name="textoBienvenidaAdmin">Control</string>
    <string name="mofdificar">Modificar</string>
    <string name="asistencia3">Ubicacion</string>
    <string name="registroplanta">Registro De Plantas</string>
    <string name="ListPlantas">Lista de Plantas</string>
    <string name="textoBienvenidaSupervisor">Supervisor De Zona</string>
    <string name="ListProductores">Lista de Produtores de Zona</string>
    <string name="textoBienvenidaSuperAdmin">Administrador</string>

    <string-array name="municipios_chiapas">
        <item>Acacoyagua</item>
        <item>Acala</item>
        <item>Acapetahua</item>
        <item>Aldama</item>
        <item>Altamirano</item>
        <item>Amatán</item>
        <item>Amatenango de la Frontera</item>
        <item>Amatenango del Valle</item>
        <item>Ángel Albino Corzo</item>
        <item>Arriaga</item>
        <item>Bejucal de Ocampo</item>
        <item>Bella Vista</item>
        <item>Benemérito de las Américas</item>
        <item>Berriozábal</item>
        <item>Bochil</item>
        <item>El Bosque</item>
        <item>Cacahoatán</item>
        <item>Catazajá</item>
        <item>Chalchihuitán</item>
        <item>Chamula</item>
        <item>Chanal</item>
        <item>Chapultenango</item>
        <item>Chenalhó</item>
        <item>Chiapa de Corzo</item>
        <item>Chiapilla</item>
        <item>Chicoasén</item>
        <item>Chicomuselo</item>
        <item>Chilón</item>
        <item>Cintalapa</item>
        <item>Coapilla</item>
        <item>Comitán de Domínguez</item>
        <item>Copainalá</item>
        <item>El Parral</item>
        <item>El Porvenir</item>
        <item>Emiliano Zapata</item>
        <item>Escuintla</item>
        <item>Francisco León</item>
        <item>Frontera Comalapa</item>
        <item>Frontera Hidalgo</item>
        <item>La Grandeza</item>
        <item>Huehuetán</item>
        <item>Huitiupán</item>
        <item>Huixtán</item>
        <item>Huixtla</item>
        <item>La Independencia</item>
        <item>Ixhuatán</item>
        <item>Ixtacomitán</item>
        <item>Ixtapa</item>
        <item>Ixtapangajoya</item>
        <item>Jiquipilas</item>
        <item>Jitotol</item>
        <item>Juárez</item>
        <item>Larráinzar</item>
        <item>La Libertad</item>
        <item>Las Margaritas</item>
        <item>Maravilla Tenejapa</item>
        <item>Marqués de Comillas</item>
        <item>Mazapa de Madero</item>
        <item>Mazatán</item>
        <item>Metapa de Domínguez</item>
        <item>Mezcalapa</item>
        <item>Mitontic</item>
        <item>Montecristo de Guerrero</item>
        <item>Motozintla</item>
        <item>Nicolás Ruiz</item>
        <item>Ocosingo</item>
        <item>Ocotepec</item>
        <item>Ocozocoautla de Espinosa</item>
        <item>Ostuacán</item>
        <item>Osumacinta</item>
        <item>Oxchuc</item>
        <item>Palenque</item>
        <item>Pantelhó</item>
        <item>Pantepec</item>
        <item>Pichucalco</item>
        <item>Pijijiapan</item>
        <item>El Porvenir</item>
        <item>Pueblo Nuevo Solistahuacán</item>
        <item>Rayón</item>
        <item>Reforma</item>
        <item>Rincón Chamula San Pedro</item>
        <item>Sabanilla</item>
        <item>Salto de Agua</item>
        <item>San Andrés Duraznal</item>
        <item>San Cristóbal de las Casas</item>
        <item>San Fernando</item>
        <item>San Juan Cancuc</item>
        <item>San Lucas</item>
        <item>Santiago el Pinar</item>
        <item>Siltepec</item>
        <item>Simojovel</item>
        <item>Sitalá</item>
        <item>Socoltenango</item>
        <item>Solosuchiapa</item>
        <item>Soyaló</item>
        <item>Suchiapa</item>
        <item>Suchiate</item>
        <item>Sunuapa</item>
        <item>Tapachula</item>
        <item>Tapalapa</item>
        <item>Tapilula</item>
        <item>Tecpatán</item>
        <item>Tenejapa</item>
        <item>Teopisca</item>
        <item>Tila</item>
        <item>Tonalá</item>
        <item>Totolapa</item>
        <item>Tumbalá</item>
        <item>Tuxtla Chico</item>
        <item>Tuxtla Gutiérrez</item>
        <item>Tuzantán</item>
        <item>Tzimol</item>
        <item>Unión Juárez</item>
        <item>Venustiano Carranza</item>
        <item>Villa Comaltitlán</item>
        <item>Villa Corzo</item>
        <item>Villaflores</item>
        <item>Yajalón</item>
        <item>Zinacantán</item>
    </string-array>


</resources>