<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Index_ChildCare_User"
    android:background="@drawable/fondo">

    <!-- Barra de navegación -->
    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">



        <!-- Texto "ChildCare" -->

        <TextView
            android:id="@+id/childCareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="App Ambiental"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <!-- Icono de usuario -->
        <ImageView
            android:id="@+id/logOutExitSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/log_out"
            android:onClick="signOut"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/userActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="user"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <!-- Carrusel de imágenes -->

    <!-- Texto largo -->

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/navigationBar"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/loremText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/contenedores_diseno"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/textoBienvenida"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/carousel"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnInfokids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#ffffff"
        android:text="@string/informacionKids"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loremText" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#ffffff"
        android:text="@string/location"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInfokids" />

    <Button
        android:id="@+id/btnFormularioUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffffff"
        android:textColor="#000000"
        android:text="Formulario"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>
