<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ws"
    tools:context=".IniciarSesion_ChildCare">

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/icon_forest_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- CONTENEDOR PRINCIPAL -->
    <LinearLayout
        android:id="@+id/contenedorPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/contenedores_diseno"
        android:clipToOutline="true"
        android:elevation="6dp"
        android:orientation="vertical"
        android:outlineProvider="background"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo">

        <!-- CORREO -->
        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Correo Electrónico:"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/contenedores_diseno"
            android:clipToOutline="true"
            android:elevation="4dp"
            android:outlineProvider="background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailCrearNew"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="Correo Electrónico"
                android:paddingHorizontal="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CONTRASEÑA -->
        <TextView
            android:id="@+id/txtContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="Contraseña:"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/contenedores_diseno"
            android:clipToOutline="true"
            android:elevation="4dp"
            android:outlineProvider="background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:paddingHorizontal="14dp"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- VER CONTRASEÑA CHECKBOX -->
        <CheckBox
            android:id="@+id/showPasswordCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/black"
            android:padding="2dp"
            android:text="Mostrar contraseña"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <!-- OLVIDASTE CONTRASEÑA -->
        <TextView
            android:id="@+id/btnOlvidePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:text="@string/txtOlvidastePass"
            android:textColor="@color/black"
            android:textStyle="bold|italic" />

        <!-- BOTÓN INICIAR SESIÓN -->
        <Button
            android:id="@+id/btnLoguear"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:elevation="6dp"
            app:backgroundTint="@color/purple_500"
            app:rippleColor="@color/purple_200"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <!-- BOTÓN REGISTRARSE -->
        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:backgroundTint="@color/purple_500"
            app:rippleColor="@color/purple_200"
            android:elevation="6dp"
            android:text="@string/registrarse"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
